--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple Movie Lookup Application",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "heroku-postbuild": "cd client && npm i && npm run build"
   },
   "author": "Christopher Reed-Asakawa",
   "license": "ISC",
